# haskellfirstprinciples

./: README.md
chapter06_Typleclasses/: exercise01.hs
chapter07/: arith4.hs  exercise03.hs  exercise05.hs
chapter07_MoreFunctionalPatterns/: exercise01.hs  exercise06.hs
chapter08/: exercise02.hs
chapter08_Recursion/: exercise02.hs  wordNumber.hs
chapter09/: exercise07.hs  listRec.hs  standard.hs
chapter09_Lists/: Cipher.hs  exercise01.hs  exercise02.hs  exercise04.hs  exercise06.hs  exercise08.hs  exercise09.hs
chapter10_FoldingLists/: exercise02.hs  exercise03.hs  exercise04.hs  exercise05.hs
chapter11_AlgebraicDatatypes/: AsPatterns.hs  DaPhone.hs  Hutton.hs  Vigenere.hs  exercise02.hs  exercise04.hs  exercise06.hs  exercise08.hs  exercise10.hs
chapter11_AlgebraicDatatypes/Vigenere/: Vigenere.cabal
chapter11_AlgebraicDatatypes/Vigenere/app/: Main.hs
chapter11_AlgebraicDatatypes/Vigenere/src/: Cipher.hs  Vigenere.hs
chapter11_AlgebraicDatatypes/Vigenere/test/: Spec.hs
chapter12_SignalingAdversity/: BinaryTree.hs  Either.hs  Maybe.hs  Natural.hs  StringProcessing.hs  ValidateWord.hs  unfold.hs
chapter13_BuildingProjects/: Person.hs  palindrome.hs
chapter13_BuildingProjects/hangman/: hangman.cabal
chapter13_BuildingProjects/hangman/src/: .Main.hs.swp  Main.hs
chapter14_Testing/Fool/: Fool.cabal
chapter14_Testing/Fool/src/: Fool.hs
chapter14_Testing/Fool/test/: Spec.hs
chapter14_Testing/PropertyTesting/: PropertyTesting.cabal
chapter14_Testing/PropertyTesting/src/: Lib.hs
chapter14_Testing/PropertyTesting/test/: Spec.hs
chapter14_Testing/WordNumber/: WordNumber.cabal
chapter14_Testing/WordNumber/src/: WordNumber.hs
chapter14_Testing/WordNumber/test/: WordNumberTest.hs
chapter14_Testing/addition/: Addition.cabal  Addition.hs
chapter14_Testing/morse/: morse.cabal
chapter14_Testing/morse/src/: Main.hs  Morse.hs
