name:                Fool
version:             0.1.0.0
homepage:            https://github.com/svozza/haskellfirstprinciples
license:             BSD3
license-file:        LICENSE
author:              Stefano Vozza
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fool
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Fool
                     , QuickCheck
  default-language:    Haskell2010
