name:                PropertyTesting
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/PropertyTesting#readme
license:             BSD3
license-file:        LICENSE
author:              Stefano Vozza 
maintainer:          svozza@example.com
copyright:           2017 Author name here
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , PropertyTesting
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
